--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Bento</title>
-		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
-		<link rel="stylesheet" href="app.css" />
+		<title>Welcome Back! <3</title>
+		<link rel="stylesheet" href="assets/style/app.css" />
 		<script src="https://unpkg.com/lucide@latest"></script>
 	</head>
 
-	<!-- 
-      ╔╗ ╔═╗╔╗╔╔╦╗╔═╗
-      ╠╩╗║╣ ║║║ ║ ║ ║
-      ╚═╝╚═╝╝╚╝ ╩ ╚═╝
-      -->
+		<!--
+	╔╗ ╔═╗╔╗╔╔╦╗╔═╗
+	╠╩╗║╣ ║║║ ║ ║ ║
+	╚═╝╚═╝╝╚╝ ╩ ╚═╝
+	-->
 
 	<body class="">
-		<button id="themeButton">
-			<i id="themeIcon" icon-name="moon"></i>
-		</button>
 		<div class="container">
 			<!-- Clock and Greetings  -->
 
@@ -27,52 +23,32 @@
 					<div id="separator"></div>
 					<div id="minutes"></div>
 				</div>
-				<div id="greetings"></div>
-			</div>
-
-			<!-- Date and Weather  -->
-
-			<div class="weatherBlock">
 				<div class="date">
 					<div id="month"></div>
 					<div id="day"></div>
 				</div>
-				<div class="weather">
-					<div class="weatherIcon">
-						<img src="assets/icons/OneDark/unknown.png" />
-					</div>
-					<div class="weatherValue">
-						<p>- °<span class="g">c</span></p>
-					</div>
-					<div class="weatherDescription">
-						<p></p>
-					</div>
-				</div>
+				<div id="greetings"></div>
 			</div>
 
-			<div class="linksBlock" id="linksBlock">
-				<div class="linksBlockLeft" id="linksBlockLeft"></div>
-				<div class="linksBlockRight" id="linksBlockRight"></div>
+			<div class="linksBlock" id="linksBlock"></div>
+			<div class="imageBlock" id="imgBlock">
+				<img src="assets/wall.png" /img>
 			</div>
 		</div>
 
 		<!-- Config  -->
-		<script src="config.js"></script>
+		<script src="assets/config.js"></script>
 
 		<!-- Scripts  -->
 		<script src="assets/js/layout.js"></script>
-		<script src="assets/js/theme.js"></script>
 		<script src="assets/js/time.js"></script>
 		<script src="assets/js/greeting.js"></script>
-		<script src="assets/js/weather.js"></script>
 
 		<!-- Generators  -->
 		<script src="assets/js/buttons.js"></script>
-		<script src="assets/js/lists.js"></script>
-
 		<!-- Icons -->
 		<script>
-			lucide.createIcons();
+		lucide.createIcons();
 		</script>
 	</body>
 
