chore: Improved title and greeting messages.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Welcome Back! <3</title>
+		<title>(´・ω・)っ由</title>
 		<link rel="stylesheet" href="assets/style/app.css" />
 		<script src="https://unpkg.com/lucide@latest"></script>
 	</head>
